// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <button>
    Hover me
  </button>
</DocumentFragment>
`;

exports[`matches snapshot when hovererd 1`] = `
<DocumentFragment>
  <button
    aria-describedby="tooltip-8"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`should show on mouseover if isDisabled has a falsy value 1`] = `
<DocumentFragment>
  <button
    aria-describedby="tooltip-6"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`shows on mouseover and closes on mouseout 1`] = `
<DocumentFragment>
  <button
    aria-describedby="tooltip-8"
  >
    Hover me
  </button>
</DocumentFragment>
`;
